[package]
name = "ethereum-stealer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"     # Optimize for size.
lto = "fat"         # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = "symbols"   # Strip symbols from binary

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
web3 = { version = "0.18.0", features = ["ws-tokio"] }
secp256k1 = { version = "0.21", features = ["rand"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
ansi_term = "0.12.1"
win32console = "0.1.5"
num_cpus = "1.13.1"
